[package]
name = "axum_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.2"
futures = "0.3"
uuid = {version = "0.8", features = ["v4"], package = "uuid"}
bson = {version = "2.2", features = ["uuid-0_8", "serde_with"]}
